--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,29 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+} 
 a {
 	text-decoration: underline;
 }
 img {
 	border: none;
+}
+
+#todo-wrap {
+	width: 100%;
+	height: 100%;
+}
+
+#todo {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 400px;
+	height: 500px;
+	margin-top: -250px;
+	margin-left: -200px;
+	background-color: #7f7d7b;
+	border-radius: 10px;
+	padding: 32px;
 }
